# fractal-generator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Taskfile.yml  conanfile.py
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt
benchmark/source/: bench.cpp
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: config.hpp  coordinates.hpp  lib.cpp  main.cpp  mandelbrot.hpp  units.hpp  util.hpp
source/graphics/: basic_display.cpp  basic_display.hpp  color_conversions.cpp  color_conversions.hpp  display_event_observer.hpp  display_to_complex.hpp  ends.hpp  selection.hpp
source/graphics/aspect_ratio/: aspect_ratio.cpp  aspect_ratio.hpp
source/graphics/color_conversions/: color_conversions.cpp  color_conversions.hpp
source/graphics/display/: display.cpp  display.hpp
source/graphics/selection_window/: selection_window.cpp  selection_window.hpp
source/mandelbrot/: equations.cpp  equations.hpp  equations_compat.cpp  equations_neon.cpp  equations_simd.cpp  equations_simd.hpp  mandelbrot_window.cpp  mandelbrot_window.hpp  window.hpp
source/units/: coordinates.cpp  coordinates.hpp  display_domain.hpp  units.hpp  units_avx.hpp
test/: CMakeLists.txt
test/source/: fractal-generator_test.cpp
